--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "scripts": {
     "test": "jest"
-  },
-  "devDependencies": {
-    "jest": "^29.7.0"
-  },
+  },  
   "dependencies": {
     "@babel/preset-env": "^7.23.9",
     "babel-jest": "^29.7.0",
-    "ts-jest": "^29.1.2"
+    "ts-jest": "^29.1.2",
+    "jest": "^29.7.0"
   }
 }
